syntax = "proto3";

message UserMessage {
  int32 user_id = 1;
  string email = 2;
  optional string password = 3;
  string name = 4;
}