syntax = "proto3";

import "message/album_message.proto";

service AlbumService {
  rpc CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse);
  rpc UpdateAlbum(UpdateAlbumRequest) returns (UpdateAlbumResponse);
  rpc DeleteAlbum(DeleteAlbumRequest) returns (DeleteAlbumResponse);

  rpc ListAlbums(ListAlbumsRequest) returns (ListAlbumsResponse);
  rpc ListOwnedAlbums(ListOwnedAlbumsRequest) returns (ListOwnedAlbumsResponse);
  rpc ListSharedAlbums(ListSharedAlbumsRequest) returns (ListSharedAlbumsResponse);
}

message CreateAlbumRequest {
  string name = 1;
}

message CreateAlbumResponse {
  AlbumMessage album = 1;
}

message UpdateAlbumRequest {
  AlbumMessage source = 1;
}

message UpdateAlbumResponse {
  AlbumMessage album = 1;
}

message DeleteAlbumRequest {
  int32 album_id = 1;
  optional bool propagate_deletion = 2;
}

message DeleteAlbumResponse {}

message ListAlbumsRequest {}

message ListAlbumsResponse {
  repeated AlbumMessage albums = 1;
}

message ListOwnedAlbumsRequest {}

message ListOwnedAlbumsResponse {
  repeated AlbumMessage albums = 1;
}

message ListSharedAlbumsRequest {}

message ListSharedAlbumsResponse {
  repeated AlbumMessage albums = 1;
}